# sciurus17_ros

./: artefacts.yaml
sciurus17_examples/: CMakeLists.txt  artefacts.yaml  package.xml
sciurus17_examples/launch/: artefacts_takt_time.launch
sciurus17_examples/scripts/: artefacts_pick_and_place_demo.py  artefacts_takt_time_test.py  pick_and_place_left_arm_demo.py
sciurus17_examples/src/: TestTakt.py  artefacts_pick_and_place_demo.py  sciurus_post_process.py
sciurus17_examples/test/: artefacts_takt_time.test  artefacts_takt_time_test
sciurus17_msgs/: CMakeLists.txt
sciurus17_msgs/srv/: check_location.srv
